fix: spacing issue in home page tab

--- a/src/styles/subsocial-mobile.scss
+++ b/src/styles/subsocial-mobile.scss
@@ -28,9 +28,6 @@
   .ant-tabs-content-holder {
     padding: 0 $space_normal;
   }
-  .DfHomeTab > .ant-tabs-nav {
-    margin-bottom: $space_normal;
-  }
 }
 
 .infinite-scroll-component {
